--- a/index.html
+++ b/index.html
@@ -16,27 +16,36 @@
 </head>
 
 <body>
-    <header class="wt-header">
-        <div class="wt-header-icon">
-            <img src="./assets/img/logo-black.png" alt="" width="200px">
+    <header class="">
+        <div class="wt-header@t wt-hidden@p wt-visible-flex@t ">
+            <div class="wt-header-icon">
+                <a href="./index.html"></a><img src="./assets/img/logo-black.png" alt="" width="200px">
+            </div>
+            <div class="wt-header-menu@t">
+                <span><a href="./index.html">HOME</a></span>
+                <span><a href="./about.html">ABOUT DIABETES</a></span>
+                <span><a href="./login.html" class="wt-btn-outlined">LOGIN</a></span>
+            </div>
         </div>
-        <div class="wt-hidden@p wt-visible-flex@t wt-header-menu">
-            <span><a>HOME</a></span>
-            <span><a>ABOUT</a></span>
-            <span><a class="wt-btn-outlined">LOGIN</a></span>
-        </div>
-        <div class="wt-visible-flex@p wt-hidden@t wt-header-menu">
-            <i class="wt-btn-icon material-icons">menu</i>
+        <div class="wt-header@p wt-text-align-center wt-hidden@t wt-visible-@p">
+            <div class="wt-header-icon">
+                <a href="./index.html"></a><img src="./assets/img/logo-black.png" alt="" width="200px">
+            </div>
+            <div class="wt-header-menu@p">
+                <span><a href="./index.html">HOME</a></span>
+                <span><a href="./about.html">ABOUT DIABETES</a></span>
+                <span><a href="./login.html" class="wt-btn-outlined">LOGIN</a></span>
+            </div>
         </div>
     </header>
     <div class="wt-banner">
         <img src="./assets/img/banner.png" alt="" width="100%">
-        <div class="wt-hidden@p wt-visible@t wt-banner-content">
+        <div class="wt-hidden@p wt-visible@t wt-banner-content banner-home-1@t">
             <p class=" wt-text-jumbo wt-color-grey">Look what this app
                 can do for you </p>
             <a class="wt-btn wt-btn-large wt-btn-primary">LOGIN</a>
         </div>
-        <div class="wt-hidden@t wt-banner-content-phone">
+        <div class="wt-hidden@t wt-banner-content banner-home-1@p">
             <p class=" wt-color-grey">Look what this app
                 can do for you </p>
             <a class="wt-btn wt-btn-large wt-btn-primary">LOGIN</a>
@@ -60,8 +69,10 @@
             <div class="wt-grid-item size-4@t size-12@p">
                 <div class="wt-text-align-center">
                     <img class="wt-border-circle wt-shadow" src="./assets/img/home-step2.png" alt="" width="200px">
-                    <h3>Add you health data</h3>
-                    <p>Track your glucose leve, weight, insuline dosis and exercise</p>
+                    <div>
+                        <h3>Add you health data</h3>
+                        <p>Track your glucose leve, weight, insuline dosis and exercise</p>
+                    </div>
                 </div>
             </div>
             <div class="wt-grid-item size-4@t size-12@p">
@@ -75,7 +86,17 @@
         </div>
     </section>
     <section>
-        <img src="./assets/img/banner2.jpeg" alt="" width="100%">
+        <div class="wt-banner">
+            <img src="./assets/img/banner2.jpeg" alt="" width="100%">
+            <div class="wt-hidden@p wt-visible@t wt-banner-content banner-home-1@t ">
+                <h2 class="wt-color-white">Track your daily health information
+                    in a better way</h2>
+            </div>
+            <div class="wt-hidden@t wt-banner-content banner-home-1@p">
+                <p class="wt-color-white">Track your daily health information
+                    in a better way</p>
+            </div>
+        </div>
     </section>
     <section class="wt-section wt-container wt-background-alt">
         <div class="wt-grid-container">
@@ -85,12 +106,10 @@
                     <hr class="wt-text-divider" width="150px" />
                 </div>
             </div>
-
             <div class="wt-grid-item size-6@p size-3@t">
-                <div class="wt-card">
-                    <div class="wt-profile-card  ">
-                        <img class="wt-profile-card-image wt-border-rounded" src="./assets/img/profile.png" alt=""
-                            width="190px">
+                <div class="wt-card wt-card-narrower">
+                    <div class="wt-card-narrower-overlay">
+                        <img src="./assets/img/profile_1.png" alt="" width="100%">
                     </div>
                     <div class="wt-card-content wt-text-align-center">
                         <h4>Saumya Makkar</h4>
@@ -99,44 +118,41 @@
                 </div>
             </div>
             <div class="wt-grid-item size-6@p size-3@t">
-                <div class="wt-card">
-                    <div class="wt-profile-card  ">
-                        <img class="wt-profile-card-image wt-border-rounded" src="./assets/img/profile.png" alt=""
-                            width="190px">
+                <div class="wt-card wt-card-narrower">
+                    <div class="wt-card-narrower-overlay">
+                        <img src="./assets/img/profile_2.png" alt="" width="100%">
                     </div>
                     <div class="wt-card-content wt-text-align-center">
-                        <h4>Saumya Makkar</h4>
-                        <p>Frontend Developer</p>
+                        <h4>Kady Teo Han Ning</h4>
+                        <p>Designer</p>
                     </div>
                 </div>
             </div>
             <div class="wt-grid-item size-6@p size-3@t">
-                <div class="wt-card">
-                    <div class="wt-profile-card  ">
-                        <img class="wt-profile-card-image wt-border-rounded" src="./assets/img/profile.png" alt=""
-                            width="190px">
+                <div class="wt-card wt-card-narrower">
+                    <div class="wt-card-narrower-overlay">
+                        <img src="./assets/img/profile_3.png" alt="" width="100%">
                     </div>
                     <div class="wt-card-content wt-text-align-center">
-                        <h4>Saumya Makkar</h4>
-                        <p>Frontend Developer</p>
+                        <h4>Tristan Teo Han You</h4>
+                        <p>Backend Developer</p>
                     </div>
                 </div>
             </div>
             <div class="wt-grid-item size-6@p size-3@t">
-                <div class="wt-card">
-                    <div class="wt-profile-card  ">
-                        <img class="wt-profile-card-image wt-border-rounded" src="./assets/img/profile.png" alt=""
-                            width="190px">
+                <div class="wt-card wt-card-narrower">
+                    <div class="wt-card-narrower-overlay">
+                        <img src="./assets/img/profile.png" alt="" width="100%">
                     </div>
                     <div class="wt-card-content wt-text-align-center">
-                        <h4>Saumya Makkar</h4>
-                        <p>Frontend Developer</p>
+                        <h4>Jean Paul Vera Soto</h4>
+                        <p>Software Enginner</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="wt-footer">
+    <section class="wt-footer wt-container">
         <div class="wt-grid-container">
             <div class="wt-grid-item size-12@p size-6@t">
                 <h3 class="wt-color-white">DIABETES PARTNER APP</h3>
@@ -153,8 +169,8 @@
                     We strive to reduce the impact of diabetes on
                     Aboriginal and Torres Strait Islander people living in Victoria.
                 </p>
-                <img src="./assets/img/a1f0o00000H3NktAAF.png" alt="" width="100px">
-                <img src="./assets/img/a1f0o00000H3NkyAAF.png" alt="" width="100px">
+                <img src="./assets/img/a1f0o00000H3NktAAF.png" alt="" width="80px">
+                <img src="./assets/img/a1f0o00000H3NkyAAF.png" alt="" width="80px">
             </div>
             <div class="wt-grid-item size-12@p">
                 <p class="wt-color-white"> © Diabetes Partner App 2022. All Rights Reserved </p>
