updated login page

--- a/about.html
+++ b/about.html
@@ -5,39 +5,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Diabetes Partner App</title>
+    <title>About diabetes - Diabetes@Home</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="./assets/img/logo_diabetes_black.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/wt.css">
+    <link rel="stylesheet" href="./assets/css/website.css">
 </head>
 
 <body>
     <header class="">
         <div class="wt-header@t wt-hidden@p wt-visible-flex@t ">
             <div class="wt-header-icon">
-                <a href="./index.html"></a><img src="./assets/img/logo-black.png" alt="" width="200px">
+                <a href="./index.html"></a><img src="./assets/img/logo_diabetes_black.png" alt="" width="120px">
             </div>
             <div class="wt-header-menu@t">
                 <span><a href="./index.html">HOME</a></span>
-                <span><a href="./about.html">ABOUT DIABETES</a></span>
+                <span class="active-menu"><a href="./about.html">ABOUT DIABETES</a></span>
                 <span><a href="./login.html" class="wt-btn-outlined">LOGIN</a></span>
             </div>
         </div>
         <div class="wt-header@p wt-text-align-center wt-hidden@t wt-visible-@p">
             <div class="wt-header-icon">
-                <a href="./index.html"></a><img src="./assets/img/logo-black.png" alt="" width="200px">
+                <a href="./index.html"></a><img src="./assets/img/logo_diabetes_black.png" alt="" width="120px">
             </div>
             <div class="wt-header-menu@p">
                 <span><a href="./index.html">HOME</a></span>
-                <span><a href="./about.html">ABOUT DIABETES</a></span>
+                <span class="active-menu"><a href="./about.html">ABOUT DIABETES</a></span>
                 <span><a href="./login.html" class="wt-btn-outlined">LOGIN</a></span>
             </div>
         </div>
     </header>
+
+    <div class="wt-hidden@t wt-visible@p">
+        <img src="./assets/img/banner_3.png" alt="" width="100%">
+    </div>
     <section class="wt-section wt-container">
         <div class="wt-grid-container">
             <div class="wt-grid-item size-12@p  size-6@t">
@@ -51,7 +55,7 @@
                     or doesn’t use insulin well. Glucose then stays in your blood
                     and doesn’t reach your cells.</p>
             </div>
-            <div class="wt-grid-item size-12@p  size-6@t">
+            <div class="wt-grid-item size-12@p  size-6@t wt-hidden@p wt-visible@t">
                 <img src="./assets/img/banner_3.png" alt="" width="100%">
             </div>
         </div>
@@ -85,15 +89,15 @@
     <section class="wt-footer wt-container">
         <div class="wt-grid-container">
             <div class="wt-grid-item size-12@p size-6@t">
-                <h3 class="wt-color-white">DIABETES PARTNER APP</h3>
-                <p class="wt-color-white">Diabetes Partner App is a project
+                <h3 class="wt-color-white">ABOUT US</h3>
+                <p class="wt-color-white">Diabetes@Home is a project
                     for the subject of Web Information Technologies
                     at the Unimersity of Melbourne</p>
-                <img src="./assets/img/logo-3d.png" alt="" width="180px">
+                    <img src="./assets/img/logo_diabetes_white.png" alt="" width="180px">
             </div>
             <div class="wt-grid-item size-12@p size-6@t">
                 <h3 class="wt-color-white">ACKNOWLEDGEMENT</h3>
-                <p class="wt-color-white">Diabetes Partner App acknowledges the traditional custodians of
+                <p class="wt-color-white">Diabetes@Home acknowledges the traditional custodians of
                     our lands and pays respect to their Elders, past and present.
                     <br />
                     We strive to reduce the impact of diabetes on
@@ -102,20 +106,15 @@
                 <img src="./assets/img/a1f0o00000H3NktAAF.png" alt="" width="80px">
                 <img src="./assets/img/a1f0o00000H3NkyAAF.png" alt="" width="80px">
             </div>
-            <div class="wt-grid-item size-12@p">
-                <p class="wt-color-white"> © Diabetes Partner App 2022. All Rights Reserved </p>
+            <div class="wt-grid-item size-12@p size-6@t">
+                <p class="wt-color-white"> © Diabetes@Home 2022. All Rights Reserved </p>
+            </div>
+            <div class="wt-grid-item size-12@p size-6@t wt-text-align-right">
+                <span class="wt-padding-small"><a href="https://instagram.com" target="_blank"><img src="./assets/img/facebook-icon.png" alt="" width="30px"></a></span>
+                <span class="wt-padding-small"><a href="https://facebook.com" target="_blank"><img src="./assets/img/insta-icon.png" alt="" width="30px"></a></span>
             </div>
         </div>
     </section>
-    <!-- The Modal -->
-    <div id="myModal" class="wt-modal">
-        <!-- Modal content -->
-        <div class="wt-modal-content">
-            <span class="wt-modal-close">&times;</span>
-            <p>Some text in the Modal..</p>
-        </div>
-
-    </div>
 </body>
 <script src="./assets/js/wt.js">
 
