updated patient menu

--- a/html_files/panel_demo.html
+++ b/html_files/panel_demo.html
@@ -56,19 +56,19 @@
 
                 <div class="wt-card-content">
                     <div class="wt-grid-container">
-                        <div class="wt-grid-item size-2@t">
+                        <div class="wt-grid-item size-2@p size-2@t">
 
                         </div>
-                        <div class="wt-grid-item size-2@t">
+                        <div class="wt-grid-item size-2@p size-2@t">
                             <strong>title</strong>
                         </div>
-                        <div class="wt-grid-item size-2@t">
+                        <div class="wt-grid-item size-2@p size-2@t">
                             <strong>title</strong>
                         </div>
-                        <div class="wt-grid-item size-2@t">
+                        <div class="wt-grid-item size-2@p size-2@t">
                             <strong>title</strong>
                         </div>
-                        <div class="wt-grid-item size-2@t">
+                        <div class="wt-grid-item size-2@p size-2@t">
                             <strong>title</strong>
                         </div>
                     </div>
@@ -79,16 +79,16 @@
                             <div class="wt-grid-item size-2@t">
                                 <img class="wt-border-rounded" src="./assets/img/patient_img.png" width="40px" alt="">
                             </div>
-                            <div class="wt-grid-item size-2@t">
+                            <div class="wt-grid-item size-2@p  size-2@t">
                                 Jane Cooper
                             </div>
-                            <div class="wt-grid-item size-2@t">
+                            <div class="wt-grid-item size-2@p size-2@t">
                                 data
                             </div>
-                            <div class="wt-grid-item size-2@t">
+                            <div class="wt-grid-item size-2@p size-2@t">
                                 data
                             </div>
-                            <div class="wt-grid-item size-2@t">
+                            <div class="wt-grid-item size-2@p size-2@t">
                                 data
                             </div>
                         </div>
